[package]
name = "heaven-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = { version = "0.15.0" }
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
rusqlite = "0.28.0"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
axum = "0.5.15"
serde = "1.0.143"
anyhow = "1.0.60"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
tower-http = { version = "0.3.4", features = ["trace"] }
dashmap = "5.3.4"
axum-server = "0.4.2"
tokio-graceful-shutdown = "0.10.1"
